# tdp005

./: .gitignore
project_main/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  baseSegement.txt  cmake_install.cmake  common.h  details.txt  in_progress  in_progress.cc  log  main.cpp  segment_glossary  world.cpp  world.h
project_main/[DEPRECATED] components/: component.h
project_main/attack/: attack.cpp  attack.h  dropAttack.cpp  dropAttack.h  rangedAttack.cpp  rangedAttack.h
project_main/components/: component.cpp  component.h
project_main/entity/: entity.cpp  entity.h
project_main/hostile/: archer.cpp  archer.h  flying.cpp  flying.h  hostile.cpp  hostile.h
project_main/html/: annotated.html  archer_8h_source.html  attack_8h_source.html  block_8h_source.html  classArcher-members.html  classArcher.html  classArcher__coll__graph.map  classArcher__coll__graph.md5  classArcher__inherit__graph.map  classArcher__inherit__graph.md5  classAttack-members.html  classAttack.html  classAttack__coll__graph.map  classAttack__coll__graph.md5  classAttack__inherit__graph.map  classAttack__inherit__graph.md5  classBlock-members.html  classBlock.html  classBlock__coll__graph.map  classBlock__coll__graph.md5  classBlock__inherit__graph.map  classBlock__inherit__graph.md5  classDropAttack-members.html  classDropAttack.html  classDropAttack__coll__graph.map  classDropAttack__coll__graph.md5  classDropAttack__inherit__graph.map  classDropAttack__inherit__graph.md5  classEntity-members.html  classEntity.html  classEntity__coll__graph.map  classEntity__coll__graph.md5  classEntity__inherit__graph.map  classEntity__inherit__graph.md5  classExitState-members.html  classExitState.html  classExitState__coll__graph.map  classExitState__inherit__graph.md5  classFlying-members.html  classFlying.html  (+160 more)
project_main/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_a.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  (+18 more)
project_main/level/: constructor.cpp  constructor.h  levelConstructor.cpp  levelConstructor.h  segmentManager.cpp  segmentManager.h
project_main/player/: player.cpp  player.h
project_main/segments/: seg1  seg1.txt  seg2  seg3  seg4  seg5  seg6
project_main/sprites/: spriteManager.cpp  spriteManager.h
project_main/state/: gameState.cpp  gameState.h  game_state.cpp  game_state.h  menuState.cpp  menuState.h  menu_state.cpp  state.cpp  state.h
project_main/staticEntity/: block.cpp  block.h
(+11 files in other folders)
